Build as 6.0-PREVIEW